# minecraft_clone

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini
include/: config.h  shader.h
include/components/: Block.h  Camera.h  Chunk.h  InputManager.h  Player.h  World.h
include/core/: Game.h
include/rendering/: VertexData.h
include/utils/: BoundingBox.h  GlmHash.h  ThreadPool.h
shaders/: shader.frag  shader.vert
shaders/selectedBlock/: shader.frag  shader.vert
shaders/skybox/: shader.frag
shaders/world/: shader.frag  shader.vert  world.frag
src/: main.cpp  main_func.txt
src/components/: World.cpp
src/core/: Game.cpp  camera.h  constants.h  input_manager.h  utils.h
src/game/: game.cpp  game.h
src/physics/: collision.cpp  collision.h  physics.cpp  physics.h
src/player/: player.h
src/renderer/: frustum.h  renderer.cpp  renderer.h
src/rendering/: VertexData.cpp
src/threadpool/: threadpool.cpp  threadpool.h
src/utils/: ThreadPool.cpp
src/world/: world.cpp  world.h
